# dotfiles

./: .gitignore  CLAUDE.md  README.md  flake.nix  lib.nix  personal.nix  setup.sh
.githooks/: pre-commit
.github/workflows/: check.yml
configurations/darwin/juicer/: applications.nix  default.nix
configurations/darwin/mixer/: applications.nix  default.nix
configurations/darwin/squeezer/: default.nix
configurations/home/citrus/: default.nix
configurations/home/default/: default.nix
configurations/home/development/: default.nix
configurations/home/headless/: default.nix
configurations/home/headless-development/: default.nix
configurations/home/minimal/: default.nix
configurations/nixos/blender/: default.nix  hardware-configuration.nix
configurations/nixos/ws-jh-song/: capitol-workspace.nix  default.nix  nvidia.nix
home/citrus/: default.nix
home/citrus/cli/: bat.nix  btop.nix  fd.nix  ripgrep.nix
home/citrus/dev/: default.nix  git.nix
home/citrus/editors/: vscode.nix
home/citrus/languages/: go.nix  json.nix  nix.nix  python.nix  yaml.nix
home/citrus/misc/: default.nix  opencode.nix  ssh.nix
home/citrus/programs/: default.nix  direnv.nix  ghostty.nix  git.nix  kitty.nix  neovim.nix  opencode.nix  podman.nix  ssh.nix  starship.nix  vscode.nix  zsh.nix
home/citrus/shell/: tmux.nix  zsh.nix
home/citrus/terminals/: kitty.nix
hosts/blender/: default.nix
hosts/squeezer/: applications.nix  default.nix
modules/: audio.nix  base.nix  desktop.nix  fonts.nix  i18n.nix  networking.nix  nix.nix  nvidia.nix  power.nix  shell.nix
modules/darwin/: base.nix  container-runtime.nix  default.nix  homebrew.nix  system-defaults.nix
modules/darwin/system/: base.nix  container-runtime.nix  defaults.nix  dock.nix  finder.nix  homebrew.nix  input.nix  pf.nix  security.nix
modules/flake/: checks.nix  git-hooks.nix  home-modules.nix  overlays.nix  templates.nix  toplevel.nix
modules/home/: base.nix  default.nix  development.nix  headless-development.nix  headless.nix  minimal.nix
modules/home/cli/: atuin.nix  bat.nix  default.nix  eza.nix  packages.nix  (+2 more)
modules/nixos/: always-on.nix  base.nix  default.nix  desktop.nix  graphical.nix  i18n.nix  minimal.nix  nvidia.nix  tailscale-exit-node.nix
modules/shared/: cache.nix  default.nix  fonts.nix  nix.nix  shell.nix
overlays/: default.nix
profiles/: darwin-workstation.nix  workstation.nix
scripts/: bootstrap.sh  update-apple-container.sh  update-template-dependencies.sh  update-templates.sh
templates/go/: .env.example  .gitignore  README.md  flake.nix  go.mod
templates/python/: .env.example  .envrc  .gitignore  README.md  config.toml  flake.nix  pyproject.toml
templates/python/src/python_service/: __init__.py  __main__.py  config.py  errors.py  service.py
templates/python/tests/: test_config.py  test_service.py
templates/rust/: .env.example  .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
templates/rust/src/: error.rs  main.rs  service.rs
templates/typescript-bun/: .env.example  .gitignore  README.md  biome.json  bun.nix  flake.nix  package.json  tsconfig.json
templates/typescript-node/: .env.example  README.md  biome.json  flake.nix  package.json
(+67 files in other folders)
