[project]
name = "python-service"
version = "0.1.0"
description = "Python service template with uv, dotenv, pathlib, and tomllib config loading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.scripts]
python-service = "python_service.__main__:main"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_service"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "basedpyright>=1.31",
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "PTH",
  "SIM",
  "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
